--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <section class="hghjgh skrollable u-align-left u-clearfix u-image u-uploaded-video u-section-1" id="sec-88a1" data-image-width="1920" data-image-height="1081">
       <div class="u-clearfix u-sheet u-sheet-1">
         <center> <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-aos="fade-up-left">Домашние задания 6а</h1>
-          <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-aos="fade-up-left">ТФТЛ</h6>
+          <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-aos="fade-up-left" >ТФТЛ</h6>
+          <p style="border-bottom: solid 3px white;" ></p>
           <br><br><br><br> <br><br><br><br>
          <div class="border" data-aos="fade-right">
           <div class="nb u-clearfix u-custom-html u-custom-html-1">
