--- a/Расписание.html
+++ b/Расписание.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru-RU">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -102,7 +102,9 @@
       background-color: #583f79 !important
       }</style>
           
-          
+          <footer class="u-align-center u-clearfix u-custom-color-1 u-footer u-footer" id="sec-ff04"><div class="u-clearfix u-sheet u-sheet-1" >
+            <p class="u-small-text u-text u-text-variant u-text-1" style="font-size: 13px">При возникновении багов пожалуйста свяжитесь со мной dz6a.app@gmail.com</p>
+          </div></footer>
          <span style="height: 64px; width: 64px; background-image: none; right: 35px; bottom: 35px; margin-left: 0px; margin-top: 0px; margin-right: auto; box-shadow: 2px -2px 8px 0 rgba(128,128,128,1);" class="u-back-to-top u-icon u-icon-circle u-palette-1-base u-spacing-12" data-href="#">
             <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
               <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
