--- a/Расписание.html
+++ b/Расписание.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html style="font-size: 16px;" lang="ru-RU">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -62,7 +62,7 @@
     <section class="skrollable u-clearfix u-image u-section-1" id="sec-9d6f" data-image-width="1600" data-image-height="901">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1">
-        <center>  <h3 class="u-align-center u-text u-text-1 u-text-body-alt-color u-text-default" style="font-size: 21px">Расписания </h3>
+        <center>  <h2 class="u-align-center u-text u-text-1 u-text-body-alt-color u-text-default" >Расписания </h2>
         </div>
         <div class="nb u-clearfix u-custom-html u-custom-html-2">
           <center>
