--- a/dz.html
+++ b/dz.html
@@ -9,9 +9,8 @@
     <title>dz</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
-    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
-  
+ 
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i">
     
@@ -65,7 +64,12 @@
     <section class="u-clearfix u-image u-section-1" id="sec-9d4a" data-image-width="1600" data-image-height="901">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1">
-          <center> <h4 class="nb">Дз и классные работы</h4>
+          <center> <h2 class="nb">Дз и классные работы</h2>
+            <div class="border" data-aos="flip-down">
+            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
+            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
+            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
+ </div>
         </div>
       </div>
     </section>
@@ -77,5 +81,11 @@
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
+    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
+    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
