--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -9,8 +9,7 @@
     <title>Dz6a Ближ.Контрольные</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Ближайшие.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
-    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
    
     <script type="application/ld+json">{
@@ -64,6 +63,9 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1" >
           <center><h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3>
+            <div data-aos="fade-down" class="border">
+<h4>Не найдено</h4>
+            </div>
         </div>
       </div>
     </section>
@@ -75,5 +77,11 @@
         <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
+    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
   </body>
 </html>
