--- a/Полезное.html
+++ b/Полезное.html
@@ -9,10 +9,8 @@
     <title>Полезное</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Полезное.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
-    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
-  
-    
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
    
     <script type="application/ld+json">{
@@ -66,6 +64,9 @@
         </div>
         <div class="u-clearfix u-custom-html u-custom-html-2">
           <center>
+            <div class="border" data-aos="flip-left"
+            data-aos-easing="ease-out-cubic"
+            data-aos-duration="2000">
             <h5>
               <a class="nb" href="https://gdz.ru/class-6/matematika/reshebnik-erin-v-k/">Ответы на контрольные и проверочные по математике</a>
             </h5>
@@ -83,8 +84,9 @@
               <a class="nb" href="фз.html">Задачник по физике</a>
             </h5>
             <h5>
-              <a class="nb" href="мз.html">Учебник по музыке</a>
+              <a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=sharing">Учебник по музыке</a>
             </h5>
+          </div>
           </center>
         </div>
       </div>
@@ -100,5 +102,11 @@ background-color: #583f79 !important
              <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
         <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
     </span>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
+    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
   </body>
 </html>
