--- a/Расписание.html
+++ b/Расписание.html
@@ -9,10 +9,7 @@
     <title>Dz6a Расписание</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="Расписание.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
-    <script class="u-script" type="text/javascript" src="общие.js" defer></script>
-  
-    
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="images/favicon.ico">
     
     <script type="application/ld+json">{
@@ -66,33 +63,35 @@
         </div>
         <div class="nb u-clearfix u-custom-html u-custom-html-2">
           <center>
+            <div class="border" data-aos="flip-up">
             <a href="расп3.jpg" class="nb">
-              <h5>Расписание уроков</h5>
+              <h4>Расписание уроков</h4>
             </a>
             <a href="звонки.jpg" class="nb">
-              <h5>Расписание звонков</h5>
+              <h4>Расписание звонков</h4>
             </a>
             <a href="обязан.jpg" class="nb">
-              <h5>Обязанности дежурных</h5>
+              <h4>Обязанности дежурных</h4>
             </a>
             <a href="деж.html" class="nb">
-              <h5>Расписание дежурств</h5>
+              <h4>Расписание дежурств</h4>
             </a>
             <a href="график.jpg" class="nb">
-              <h5>График захода в лицей</h5>
+              <h4>График захода в лицей</h4>
             </a>
             <a href="учителя_3118474130252.jpg" class="nb">
-              <h5>Предметы и учителя</h5>
+              <h4>Предметы и учителя</h4>
             </a>
-            <h5>
+            <h4>
               <a href="список.jpg" class="nb">Список литературы</a>
-            </h5>
+            </h4>
             <a href="консультации.jpg" class="nb">
-              <h5>График консультаций</h5>
+              <h4>График консультаций</h4>
             </a>
             <a href="внеурок.jpg" class="nb">
-              <h5>Расписание внеурочки</h5>
+              <h4>Расписание внеурочки</h4>
             </a>
+          </div>
           </center>
         </div>
       </div>
@@ -109,5 +108,11 @@
             <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
               <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
           </span>
+          <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+          <script>
+            AOS.init();
+          </script>
+          <script class="u-script" type="text/javascript" src="jquery.js" defer></script>
+          <script class="u-script" type="text/javascript" src="общие.js" defer></script>
   </body>
 </html>
