--- a/dz.html
+++ b/dz.html
@@ -66,9 +66,8 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
-            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
-            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
-            <h5> <a href=" декабря.html" class="nb">Дз на  декабря  </a></h5>
+            <h5> <a href="20 декабря.html" class="nb">Дз на  декабря  </a></h5>
+
  </div>
         </div>
       </div>
