--- a/20 декабря.html
+++ b/20 декабря.html
@@ -65,17 +65,17 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
-            <div class="border" data-aos="flip-down">
-<h3>Математика</h3>
-  <h4>562, 563, 564 и правила на оценку по всему материалу</h4>
-      <h3>Английский</h3>
-  <h4>слова 4abc</h4>
-    <h3>Литература</h3>
-  <h4>СТР.234-236, прочитать рассказы « Толстый и Тонкий», подготовить пересказ рассказа; «Лошадиная фамилия»( нет в учебнике). </h4>
-      <h3>Физика</h3>
-  <h4>графики; определения; основные понятия (опрос)</h4>
-        <h3>География</h3>
-  <h4>К.к с. 12-13 ном. 1,2</h4>
+            <div  data-aos="flip-down">
+<h4>Математика</h4>
+  <h5>562, 563, 564 и правила на оценку по всему материалу</h5><br>
+      <h4>Английский</h4>
+  <h5>слова 4abc</h5><br>
+    <h4>Литература</h4>
+  <h5>СТР.234-236, прочитать рассказы « Толстый и Тонкий», подготовить пересказ рассказа; «Лошадиная фамилия»( нет в учебнике). </h5><br>
+      <h4>Физика</h4> 
+  <h5>графики; определения; основные понятия (опрос)</h5><br>
+        <h4>География</h4>
+  <h5>К.к с. 12-13 ном. 1,2</h5>
   
  </div>
         </div>
