--- a/20 декабря.html
+++ b/20 декабря.html
@@ -65,7 +65,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
-            <div  data-aos="flip-down">
+            <div  data-aos="zoom-out-left">
 <h4>Математика</h4>
   <h5>562, 563, 564 и правила на оценку по всему материалу</h5><br>
       <h4>Английский</h4>
