--- a/20 декабря.html
+++ b/20 декабря.html
@@ -68,7 +68,7 @@
             <div  data-aos="zoom-out-left">
 <h4>Математика</h4>
   <h5>562, 563, 564 и правила на оценку по всему материалу</h5><br>
-      <h4>Английский</h4>
+      <h4>Английский 1гр.</h4>
   <h5>слова 4abc</h5><br>
     <h4>Литература</h4>
   <h5>СТР.234-236, прочитать рассказы « Толстый и Тонкий», подготовить пересказ рассказа; «Лошадиная фамилия»( нет в учебнике). </h5><br>
