--- a/англ.html
+++ b/англ.html
@@ -1,1 +1,2 @@
-<object><embed src="ilovepdf_merged.pdf" width="100%" height="100%" /></object>
+
+<iframe src="ilovepdf_merged.pdf" width="100%" height="100%"></iframe>
