--- a/деж.html
+++ b/деж.html
@@ -1,1 +1,2 @@
-<object><embed src="дежурные ноябрь декабрь.pdf" width="100%" height="100%" /></object>
+
+<iframe src="дежурные ноябрь декабрь.pdf" width="100%" height="100%"></iframe>
