--- a/диктант.html
+++ b/диктант.html
@@ -1,1 +1,2 @@
-<object><embed src="matemat-diktant-1991 (2).pdf" width="100%" height="100%" /></object>
+
+<iframe src="matemat-diktant-1991 (2).pdf" width="100%" height="100%"></iframe>
