--- a/мз.html
+++ b/мз.html
@@ -1,1 +1,2 @@
-<object><embed src="muz047- Музыка. 6 класс_Сергеева, Критская_2013 -168с.pdf" width="100%" height="100%" /></object>
+
+<iframe src="muz047- Музыка. 6 класс_Сергеева, Критская_2013 -168с.pdf" width="100%" height="100%"></iframe>
