--- a/фз.html
+++ b/фз.html
@@ -1,1 +1,2 @@
-<object><embed src="Задачник по физике.pdf" width="100%" height="100%" /></object>
+
+<iframe src="Задачник по физике.pdf" width="100%" height="100%"></iframe>
