--- a/физ.html
+++ b/физ.html
@@ -1,1 +1,2 @@
-<object><embed src="6 класс.pdf" width="100%" height="100%" /></object>
+
+<iframe src="6 класс.pdf" width="100%" height="100%"></iframe>
