--- a/Расписание.html
+++ b/Расписание.html
@@ -88,6 +88,11 @@
             </a>
             <a href="внеурок.jpg" class="nb">
               <h4>Расписание внеурочки</h4>
+                          <a href="316.jpg" class="nb">
+              <h4>План рассадки 316</h4>
+            </a>
+            <a href="другие.jpg" class="nb">
+              <h4>План рассадки в других кабинетах</h4>
             </a>
           </div>
           </center>
