--- a/англ.html
+++ b/англ.html
@@ -1,2 +1,2 @@
-
-<iframe src="ilovepdf_merged.pdf" width="40%" height="50%"></iframe>
+<center>
+<iframe src="ilovepdf_merged.pdf" width="60%" height="100%"></iframe>
