--- a/деж.html
+++ b/деж.html
@@ -1,2 +1,2 @@
-
-<iframe src="дежурные ноябрь декабрь.pdf" width="40%" height="50%"></iframe>
+<center>
+<iframe src="дежурные ноябрь декабрь.pdf" width="60%" height="100%"></iframe>
