--- a/физ.html
+++ b/физ.html
@@ -1,2 +1,2 @@
-
-<iframe src="6 класс.pdf" width="40%" height="50%"></iframe>
+<center>
+<iframe src="6 класс.pdf" width="60%" height="100%"></iframe>
