--- a/диктант.html
+++ b/диктант.html
@@ -1,2 +1,2 @@
-
-<iframe src="matemat-diktant-1991 (2).pdf" width="40%" height="50%"></iframe>
+<center> 
+<iframe src="matemat-diktant-1991 (2).pdf" width="60%" height="100%"></iframe>
