--- a/фз.html
+++ b/фз.html
@@ -1,2 +1,2 @@
-
-<iframe src="Задачник по физике.pdf" width="40%" height="50%"></iframe>
+<center>
+<iframe src="Задачник по физике.pdf" width="60%" height="100%"></iframe>
