--- a/Полезное.html
+++ b/Полезное.html
@@ -71,21 +71,12 @@
               <a class="nb" href="https://gdz.ru/class-6/matematika/reshebnik-erin-v-k/">Ответы на контрольные и проверочные по математике</a>
             </h5>
           
-            <h5>
-              <a class="nb" href="англ.html">Ответы на контрольные и проверочные по английскому языку</a>
-            </h5>
-            <h5>
-              <a href="диктант.html" class="nb">Диктанты по математике</a>
-            </h5>
-            <h5>
-              <a class="nb" href="физ.html">Методичка по физике</a>
-            </h5>
-            <h5>
-              <a class="nb" href="фз.html">Задачник по физике</a>
-            </h5>
-            <h5>
-              <a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=sharing">Учебник по музыке</a>
-            </h5>
+ <h5><a class="nb" href="https://drive.google.com/file/d/1USbV22DrJuoOvBm0uBaFe62DbYQ43jf2/view?usp=sharing" />Ответы на контрольные и проверочные по биологии</a></h5>
+				<h5><a class="nb" href="https://drive.google.com/file/d/1S6L0ShQMEti40Zr-2Yc819VzYANkMAGa/view?usp=drivesdk" />Ответы на контрольные и проверочные по английскому языку</a></h5>
+					<h5><a href="https://drive.google.com/file/d/1PmMoNs8NcYEQb9nWDxl-hP5_33xm38u3/view?usp=drivesdk" class="nb" >Диктанты по математике</a></h5>
+					 <h5><a class="nb" href="https://drive.google.com/file/d/16uHQKUE5aJ_52nTU1T7nEzXu93MV0rZz/view?usp=sharing" />Методичка по физике</a></h5>
+				<h5><a class="nb" href="https://drive.google.com/file/d/1ApWu3NeV25H_MViSgu-adCxQCcDYulDP/view?usp=sharing">Задачник по физике</a></h5>
+					<h5><a class="nb" href="https://drive.google.com/file/d/19Cn-l-LaIpGfdMpDBPD4iGT9EHhG6zeS/view?usp=drivesdk">Учебник по музыке</a></h6>
           </div>
           </center>
         </div>
