--- a/Расписание.html
+++ b/Расписание.html
@@ -73,7 +73,7 @@
             <a href="обязан.jpg" class="nb">
               <h4>Обязанности дежурных</h4>
             </a>
-            <a href="деж.html" class="nb">
+            <a href="https://drive.google.com/file/d/1BGtPd1BZ7akIM99RcJ6tWhPSK0jnvbbp/view?usp=drivesdk" class="nb">
               <h4>Расписание дежурств</h4>
             </a>
             <a href="график.jpg" class="nb">
