--- a/download.html
+++ b/download.html
@@ -2,22 +2,12 @@
 <html>
 <head>
 
-    <meta name="description" content="скачать приложенте Dz6a тфтл" />
-<meta name="keywords" content="Dz6a, скачать, приложение, ТФТЛ" />
+    <meta name="description" content="скачать приложенте Dz6a тфтл" >
+<meta name="keywords" content="Dz6a, скачать, приложение, ТФТЛ" >
 <link rel="stylesheet" type="text/css" href="//appsgeyser.io/assets/9c131307/css/apps-style.css" media="all" />
 <title>Dz6a тфтл Android </title>
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta property="og:title" content="Android App: Dz6a тфтл"/>
-    <meta property="og:site_name" content="AppsGeyser"/>
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://appsgeyser.io/public/837/8374602/14818100/thumbs/icon_Dz6a тфтл_14818100_72.png"/>
-    <meta property="og:description" content="Download and install Dz6a тфтл app for Android device for free. Powered by AppsGeyser - App Builder"/>
-    <meta property="og:url" content="http://appsgeyser.io/getwidget/Dz6a тфтл_14818100"/>
-    <meta name="geo.region" content="US-VA"/>
-    <meta name="geo.placename" content="Alexandria"/>
-    <meta name="geo.position" content="38.799972;-77.05069"/>
-    <meta name="ICBM" content="38.799972, -77.05069"/>
+
     <meta name="description" content="Загрузить мобильное приложение Dz6a тфтл"/>
     <meta name="title" content="Android приложение: Dz6a тфтл"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -34,8 +24,7 @@
     <link rel="manifest" href="/site.webmanifest?v=m2l9PBkm4l">
     <link rel="mask-icon" href="/safari-pinned-tab.svg?v=m2l9PBkm4l" color="#5bbad5">
     <link rel="shortcut icon" href="/favicon.ico?v=m2l9PBkm4l">
-    <meta name="apple-mobile-web-app-title" content="AppsGeyser App Builder">
-    <meta name="application-name" content="AppsGeyser App Builder">
+
     <meta name="msapplication-TileColor" content="#00a300">
     <meta name="theme-color" content="#ffffff">
 
