--- a/dz.html
+++ b/dz.html
@@ -3,10 +3,10 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+        <meta name="keywords" content="ТФТЛ,DZ6A,dz6a,Dz6a,dz6a тфтл,тфтл,дз6а тфтл,дз,Dz,Расписание,Домашние задания.">
+    <meta name="description" content="Dz6a тфтл все дз 6а на сайте и многое другое">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>dz</title>
+    <title>Dz6a дз</title>
     <link rel="stylesheet" href="общие.css" media="screen">
 <link rel="stylesheet" href="dz.css" media="screen">
  
