--- a/20 декабря.html
+++ b/20 декабря.html
@@ -75,7 +75,7 @@
       <h4>Физика</h4> 
   <h5>графики; определения; основные понятия (опрос)</h5><br>
         <h4>География</h4>
-  <h5>К.к с. 12-13 ном. 1,2</h5>
+  <h5>параграф 44, записи в тетради, знать термины. Р.т. стр.38-40 №1-7. К\Карта стр.12-13 №1-6</h5>
   
  </div>
         </div>
