--- a/dz.html
+++ b/dz.html
@@ -82,7 +82,8 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
-		     <h5> <a href="22 декабря.html" class="nb">Дз на 22 декабря Геометрия, Русский</a></h5><br>
+		     <h5> <a href="22 декабрякл.html" class="nb">Дз на 22 декабря Русский классная работа</a></h5><br>
+ <h5> <a href="22 декабря.html" class="nb">Дз на 22 декабря Геометрия, Русский</a></h5><br>
 
 
  </div>
