--- a/22 декабрякл.html
+++ b/22 декабрякл.html
@@ -72,6 +72,7 @@
    <img src="Screenshot_2.jpg" alt="1">
  <img src="Screenshot_3.jpg" alt="2">
 <img src="Screenshot_4.jpg" alt="3">
+<img src="Screenshot_5.jpg" alt="3">
 
  </div>
         </div>
