--- a/nol.html
+++ b/nol.html
@@ -646,6 +646,6 @@ function checkLocation(e){
 
 }
 </SCRIPT>
-
+<a href="ugmk.php.html"><h2>Игра красный куб (только для пк)</h2>
 </body>
 </html>
