--- a/nol.html
+++ b/nol.html
@@ -646,6 +646,13 @@ function checkLocation(e){
 
 }
 </SCRIPT>
+	<style>
+		.nb {
+		color:white;
+		}
+		</style>
+	<br>
 <a href="ugmk.php.html"><h2>Игра красный куб (только для пк)</h2>
+	
 </body>
 </html>
