--- a/nol.html
+++ b/nol.html
@@ -647,12 +647,12 @@ function checkLocation(e){
 }
 </SCRIPT>
 	<style>
-		.nb {
-		color:white;
+		.bn {
+		color:#000000;
 		}
 		</style>
 	<br>
-<a href="ugmk.php.html"><h2>Игра красный куб (только для пк)</h2>
+<a href="ugmk.php.html" class="bn"><h2>Игра красный куб (только для пк)</h2>
 	
 </body>
 </html>
