--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <center> <h1 class="u-align-center u-text u-text-body-alt-color u-text-1" data-aos="fade-up-left">Домашние задания 6а</h1>
             <h6 class="u-align-center u-text u-text-body-alt-color u-text-2" data-aos="fade-up-left" >ТФТЛ</h6>
         
-       <br><br><h3>До нового года осталось:</h3><br><br><br><br>
+       <br><br><h3>До нового года осталось:</h3><script src="//megatimer.ru/get/cd5d8f866de20cbbb90a4d14c1cfca21.js"></script><br><br><br><br>
            <div class="border" data-aos="fade-right">
             <div class="nb u-clearfix u-custom-html u-custom-html-1">
               <h5>
