--- a/22 декабря.html
+++ b/22 декабря.html
@@ -26,7 +26,7 @@
 </head>
   <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601">
     <center><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
-        <a href="https://localhost" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
+        <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
           <img src="images/favicon.ico?rand=4951" class="u-logo-image u-logo-image-1" data-image-width="80">
         </a>
         <nav class="u-align-left u-menu u-menu-dropdown u-nav-spacing-25 u-offcanvas u-menu-1">
