--- a/dz.html
+++ b/dz.html
@@ -83,7 +83,7 @@
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
 		    
-		     <h5> <a href="" class="nb">Дз на  января </a></h5>
+		     <h5> <a href="11 января.html" class="nb">Дз на  11 января Математика, Английский</a></h5>
 
 
  </div>
