--- a/11 января.html
+++ b/11 января.html
@@ -67,9 +67,9 @@
           <center> 
             <div  data-aos="zoom-out-left">
 <h4>Математика</h4>
-  <h5></h5><br>
+  <h5>п.21, №635-648( зеленые) стр 132-134 прочиать.</h5><br>
       <h4>Английский 1 группа</h4>
-  <h5></h5><br>
+  <h5>ex.1, p. 30 (w.b.)</h5><br>
   
  </div>
         </div>
