--- a/dz.html
+++ b/dz.html
@@ -82,6 +82,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	         <h5> <a href="13 января.html" class="nb">Дз на  13 января Математика, Английский, Литература</a></h5>
 		         <h5> <a href="12 января.html" class="nb">Дз на  12 января Русский, Геометрия</a></h5>
 		     <h5> <a href="11 января.html" class="nb">Дз на  11 января Математика, Английский</a></h5>
 
