--- a/13 января.html
+++ b/13 января.html
@@ -67,7 +67,7 @@
           <center> 
             <div  data-aos="zoom-out-left">
 <h4>Литература</h4>
-  <h5>Выучить любой из стихов которые называли</h5><br>
+  <h5>Выучить любой из стихов 239,241,243</h5><br>
       <h4>Английский 1 группа</h4>
   <h5>W.b p. 30 ex. 2,3</h5><br>
   <h4>Математика</h4>
