--- a/Главная.html
+++ b/Главная.html
@@ -21,7 +21,8 @@
 		"logo": "images/favicon.ico?rand=4951"
 }</script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
+     crossorigin="anonymous"></script>
 </head>
   <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <a href="index.html" class="u-image u-logo u-image-1" data-image-width="256" data-image-height="256">
