--- a/dz.html
+++ b/dz.html
@@ -22,7 +22,8 @@
 		"logo": "images/favicon.ico?rand=4951"
 }</script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
+     crossorigin="anonymous"></script>
 </head>
   <body class="u-body">
 	  <!-- Yandex.Metrika counter -->
