--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -20,7 +20,8 @@
 
 
   
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
+     crossorigin="anonymous"></script>
 
 </head>
   <body class="u-body"><header class="u-align-center-xs u-clearfix u-custom-color-1 u-header u-sticky u-header" id="sec-b601"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-sheet-1">
