--- a/download.html
+++ b/download.html
@@ -1,7 +1,8 @@
 <!DOCTYPE lang="ru" >
 <html>
 <head>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9491079025870017"
+     crossorigin="anonymous"></script>
     <meta name="description" content="скачать приложенте Dz6a тфтл" >
 <meta name="keywords" content="Dz6a, скачать, приложение, ТФТЛ" >
 <link rel="stylesheet" type="text/css" href="//appsgeyser.io/assets/9c131307/css/apps-style.css" media="all" />
