--- a/17 января.html
+++ b/17 января.html
@@ -69,6 +69,8 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
             <div  data-aos="zoom-out-left">
+            	<h4>Математика</h4>
+  <h5>Придумать или найти несколько задач на обратное пропорциональное и найти пословицы поговорки об обратном пропорциональном</h5><br>
 <h4>Литература</h4>
   <h5>Прочитать рассказы А. Куприн «Чудесный доктор», Ф.М.Достоевский « Мальчик у Христа на ёлке». </h5><br>
 <h4>Физика</h4>
