--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </div>
             <div class="u-clearfix u-custom-html u-custom-html-5">
               <h2>
-                <a href="nol.html" class="neved"  data-aos="zoom-in">game </a>
+                <a href="play.html" class="neved"  data-aos="zoom-in">game </a>
               </h2>
             
           </div>
