--- a/Главная.html
+++ b/Главная.html
@@ -81,7 +81,7 @@
           </div>
             <div class="u-clearfix u-custom-html u-custom-html-5">
               <h2>
-                <a href="nol.html" class="neved"  data-aos="zoom-in">game </a>
+                <a href="play.html"   class="nb" data-aos="zoom-in">Игры</a>
               </h2>
             
           </div>
