--- a/3dkub.html
+++ b/3dkub.html
@@ -32,7 +32,7 @@
         </a>
         </header>
         
-        <p><img src="logo.jpg" height="115px" width="130px" class="leftimg" ><h3 class="nb ">3D Куб</h3><h6>игра на внимательность</h6></p>
+        <p><img src="logo.jpg" height="115px" width="130px" class="leftimg" ><h3 class="nb ">3D Куб</h3><h6 class="nb" >игра на внимательность</h6></p>
         <br>
   <p><img src="1.jpg" width="50%" ><img src="4.jpg" width="50%" ><img src="3.jpg" width="50%" ><img src="2.jpg"width="50%" ></p>
          <a href="3D Kub.apk"><div class="mainText">Загрузить</div>
