--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             </div>
           </div>
             <div class="u-clearfix u-custom-html u-custom-html-5">
-              <h2>
-                <a href="play.html" class="neved"  data-aos="zoom-in">game </a>
+    <h2>
+                <a href="play.html"   class="nb" data-aos="zoom-in">Игры</a>
               </h2>
             
           </div>
