--- a/3dkub.html
+++ b/3dkub.html
@@ -35,7 +35,7 @@
         <p><img src="logo.jpg" height="115px" width="130px" class="leftimg" ><h3 class="nb ">3D Куб</h3><h6 class="nb" >игра на внимательность</h6></p>
         <br>
   <p><img src="1.jpg" width="50%" ><img src="4.jpg" width="50%" ><img src="3.jpg" width="50%" ><img src="2.jpg"width="50%" ></p>
-         <a href="3D Kub.apk"><div class="mainText">Загрузить</div>
+         <a href="https://disk.yandex.ru/d/kydRqeDBZvIJSA"><div class="mainText">Загрузить</div>
          
          <style>
          	.mainText{
