--- a/3dkub.html
+++ b/3dkub.html
@@ -35,8 +35,9 @@
         <p><img src="logo.jpg" height="115px" width="130px" class="leftimg" ><h3 class="nb ">3D Куб</h3><h6 class="nb" >игра на внимательность</h6></p>
         <br>
   <p><img src="1.jpg" width="50%" ><img src="4.jpg" width="50%" ><img src="3.jpg" width="50%" ><img src="2.jpg"width="50%" ></p>
-         <a href="https://disk.yandex.ru/d/kydRqeDBZvIJSA"><div class="mainText">Загрузить</div>
-         
+         <a href="https://disk.yandex.ru/d/kydRqeDBZvIJSA"><div class="mainText">Загрузить</div></а>
+<center >                <h3><a href="in.html"><div class="nb">Инструкция по установке</a></h3>
+         </center>
          <style>
          	.mainText{
         font-size: 30px;
