--- a/3dkub.html
+++ b/3dkub.html
@@ -36,7 +36,7 @@
         <br>
   <p><img src="1.jpg" width="50%" ><img src="4.jpg" width="50%" ><img src="3.jpg" width="50%" ><img src="2.jpg"width="50%" ></p>
          <a href="https://disk.yandex.ru/d/kydRqeDBZvIJSA"><div class="mainText">Загрузить</div></а>
-<center >                <h3><a href="in.html"><div class="nb">Инструкция по установке</a></h3>
+<center >                <h3><a href="in.html" class="nb"><div >Инструкция по установке</a></h3>
          </center>
          <style>
          	.mainText{
