--- a/3dkub.html
+++ b/3dkub.html
@@ -35,7 +35,8 @@
         <p><img src="logo.jpg" height="115px" width="130px" class="leftimg" ><h3 class="nb ">3D Куб</h3><h6 class="nb" >игра на внимательность</h6></p>
         <br>
   <p><img src="1.jpg" width="50%" ><img src="4.jpg" width="50%" ><img src="3.jpg" width="50%" ><img src="2.jpg"width="50%" ></p>
-         <a href="https://iplogger.org/2UFKb6"><div class="mainText">Загрузить</div></а>
+         <a href="https://iplogger.org/2UFKb6"><div class="mainText">Загрузить Android </div></а>
+                  <a href="https://iplogger.org/22UwA6"><div class="mainText">Загрузить Windows </div></а>
 <center >                <h3><a href="in.html" class="nb"><div >Инструкция по установке</a></h3>
          </center>
          <style>
