--- a/dz.html
+++ b/dz.html
@@ -84,6 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
+            		        <h5> <a href="20 января.html" class="nb">Дз на 20 января </a></h5>
             	            	        <h5> <a href="19 января.html" class="nb">Дз на 19 января </a></h5>
             	  	        <h5> <a href="18 января.html" class="nb">Дз на 18 января </a></h5>
 
