--- a/20 января.html
+++ b/20 января.html
@@ -70,11 +70,11 @@
           <center> 
             <div  data-aos="zoom-out-left">
 <h4>Литература</h4>
-  <h5></h5><br>
+  <h5>Совершенствуем свою речь с.16 пересказ</h5><br>
   <h4>Математика</h4>
   <h5>746а,747,750а,752</h5><br>
 <h4>Английский 1 гр.</h4>
-  <h5></h5><br>
+  <h5>W.b p. ex. </h5><br>
   
 
   
