--- a/20 января.html
+++ b/20 января.html
@@ -72,7 +72,7 @@
 <h4>Литература</h4>
   <h5>Совершенствуем свою речь с.16 пересказ</h5><br>
   <h4>Математика</h4>
-  <h5>746а,747,750а,752</h5><br>
+  <h5>ничего (то что она говорила это на геометрию) </h5><br>
 <h4>Английский 1 гр.</h4>
   <h5>W.b p. ex. </h5><br>
   
