--- a/21 января.html
+++ b/21 января.html
@@ -70,7 +70,7 @@
           <center> 
             <div  data-aos="zoom-out-left">
 <h4>Обществознание</h4>
-  <h5>п. 6, "в классе и дома" (учить)</h5><br>
+  <h5>п. 6, "в классе и дома" (учебник)</h5><br>
   <h4>Литература</h4>
   <h5> СТР. 20. Творческое задание. Выполнить письменно в тетради.</h5><br>
 <h4>Русский</h4>
