--- a/22 января.html
+++ b/22 января.html
@@ -70,7 +70,7 @@
           <center> 
             <div  data-aos="zoom-out-left">
 <h4>Биология </h4>
-  <h5>Учебник стр.164-165 читать, ? устно, термины с определениями учить , посмотреть https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/vidoizmeneniya-kornya. Повторить стр.158-165 с терминами к проверочной работе</h5><br>
+  <h5>Учебник стр.164-165 читать, ? устно, термины с определениями учить , посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/vidoizmeneniya-kornya" >ссылка</a>. Повторить стр.158-165 с терминами к проверочной работе</h5><br>
   <h4>Русский</h4>
   <h5>упр 395, подготовиться к грамматическому заданию по разрядам прилагательных</h5><br>
 
