--- a/24 января.html
+++ b/24 января.html
@@ -73,6 +73,9 @@
   <h5>СТР. 22, выучить стихотворение «Я покинул родимый дом».</h5><br>
   <h4>География</h4>
   <h5>параграф 47, знать термины, записи в тетради, р.т. стр.45-47№2,3,4,6,7,8,9. </h5><br>
+  <h4>Английский 1гр.</h4>
+  <h5></h5><br>
+
 
   <h4>Физика</h4>
   <h5>урок 10 (учить); вопросы (отвечать), по тетради (знать)</h5><br>
