--- a/24 января.html
+++ b/24 января.html
@@ -72,7 +72,7 @@
 <h4>Литература</h4>
   <h5>СТР. 22, выучить стихотворение «Я покинул родимый дом».</h5><br>
   <h4>География</h4>
-  <h5>параграф 47, знать термины, записи в тетради, р.т. стр.45-47№2,3,4,6,7,8,9. </h5><br>
+  <h5>параграф 48, р.т. стр.52-53, №1-7. </h5><br>
   <h4>Английский 1гр.</h4>
   <h5></h5><br>
 
