--- a/24 января.html
+++ b/24 января.html
@@ -69,8 +69,10 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
             <div  data-aos="zoom-out-left">
+<h4>Математика</h4>
+  <h5>п. 28 читать, 809,811,813,815,817</h5><br>
 <h4>Литература</h4>
-  <h5>СТР. 22, выучить стихотворение «Я покинул родимый дом».</h5><br>
+  <h5></h5><br>
   <h4>География</h4>
   <h5>параграф 48, р.т. стр.52-53, №1-7. </h5><br>
   <h4>Английский 1гр.</h4>
