--- a/25 января.html
+++ b/25 января.html
@@ -69,18 +69,15 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> 
             <div  data-aos="zoom-out-left">
-<h4>Математика</h4>
-  <h5>п. 28 читать, 809,811,813,815,817</h5><br>
-<h4>Литература</h4>
-  <h5>СТР. 22, выучить стихотворение «Я покинул родимый дом</h5><br>
-  <h4>География</h4>
-  <h5>Д\з параграф 47, знать термины, записи в тетради, р.т. стр.45-47№2,3,4,6,7,8,9. <br>параграф 48, р.т. стр.52-53, №1-7. </h5><br>
+
+  <h4>История</h4>
+  <h5>Контурные карты. Страница 2, задания № 1-5</h5><br>
   <h4>Английский 1гр.</h4>
   <h5>P. 54 (c.b.) готовимся к контрольной работе</h5><br>
 
 
-  <h4>Физика</h4>
-  <h5>урок 10 (учить); вопросы (отвечать), по тетради (знать)</h5><br>
+  <h4>Русский </h4>
+  <h5>412</h5><br>
 
 
   
