--- a/Ближайшие.html
+++ b/Ближайшие.html
@@ -66,7 +66,7 @@
           <center><h3 class="nb" style="font-size: 22px" >Ближайшие Контрольные </h3>
             <div data-aos="fade-down" class="border">
 <h4>Физика<br>31 Января</h4>
-<p>1.Элементарный электрический заряд<br>
+<p class="nb">Вопросы: 1.Элементарный электрический заряд<br>
 2.положительные элементарные заряды<br>
 3.отрицательные элементарные заряды<br>
 4.как обозначаются электроны<br>
