--- a/dz.html
+++ b/dz.html
@@ -84,9 +84,9 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
-            		        <h5> <a href="25 января.html" class="nb">Дз на 25 января </a></h5>
-            		        <h5> <a href="24 января.html" class="nb">Дз на 24 января </a></h5>
-            	     <h5> <a href="22 января.html" class="nb">Дз на 22 января </a></h5>
+            	            	     <h5> <a href="26 января.html" class="nb">Дз на 26 января Русский Геометрия Изо </a></h5>
+
+
 
 
 
