--- a/dz.html
+++ b/dz.html
@@ -84,10 +84,9 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	      	            	            	     <h5> <a href="29 января.html" class="nb">Дз на 29 января Русский Биология</a></h5>
             	            	            	            	     <h5> <a href="28 января.html" class="nb">Дз на 28 января Русский Литература Обществознание</a></h5>
-            	            	            	     <h5> <a href="27 января.html" class="nb">Дз на 27 января Математика Английский Литература</a></h5>
-            	            	     <h5> <a href="26 января.html" class="nb">Дз на 26 января Русский Геометрия Изо </a></h5>
-
+            	            	            
 
 
 
