--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
               <h5>
                 <a href="https://dz6ablog.blogspot.com/?m=1" class="nb">Перейти в блог класса</a>
               </h5>
+                        <h5>
+                <a href="https://t.me/Dz6a_tftl_bot" class="nb">Перейти в telegram бота Dz6a</a>
+              </h5>
             </div>
             <div class="u-clearfix u-custom-html u-custom-html-2">
               <h5>
