--- a/Главная.html
+++ b/Главная.html
@@ -77,6 +77,9 @@
               <h5>
                 <a href="download.html" class="nb">Скачать мобильно приложение Dz6a android</a>
               </h5>
+              <h5>
+                <a href="https://t.me/Dz6a_tftl_bot" class="nb">Перейти в telegram бота Dz6a</a>
+              </h5>
             </div>
           </div>
             <div class="u-clearfix u-custom-html u-custom-html-5">
