--- a/29 января.html
+++ b/29 января.html
@@ -72,7 +72,7 @@
 
 
   <h4>Биология</h4>
-  <h5>Учебник стр.166-169 читать, ? устно, термины с определениями учить, РТ №№1,3,4. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/pobegi-i-pochki">ссылка</a></h5><br>
+  <h5>Учебник стр.166-169 читать, ? устно, термины с определениями учить, РТ с. 57 №1,3,4. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/pobegi-i-pochki">ссылка</a></h5><br>
 
 
   <h4>Русский</h4>
