--- a/dz.html
+++ b/dz.html
@@ -84,6 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	            	      	            	            	     <h5> <a href="31 января.html" class="nb">Дз на 31 января Математика География Литература</a></h5>
             	      	            	            	     <h5> <a href="29 января.html" class="nb">Дз на 29 января Русский Биология</a></h5>
             	            	            	            	     <h5> <a href="28 января.html" class="nb">Дз на 28 января Русский Литература Обществознание</a></h5>
             	            	            
