--- a/31 января.html
+++ b/31 января.html
@@ -76,8 +76,10 @@
   <h4>Литература</h4>
   <h5>стр. 29-49, прочитать.</h5><br>
 
-  <h4>География</h4>
-  <h5>параграф 48, р.т. стр.52-53, №1-7</h5><br>
+  <h4>Биология</h4>
+  <h5></h5><br>
+  	  <h4>Музыка</h4>
+  <h5></h5><br>
 
  </div>
         </div>
