--- a/31 января.html
+++ b/31 января.html
@@ -79,7 +79,7 @@
   <h4>Биология</h4>
   <h5>Учебник стр.170-173 читать, ? устно, термины с определениями учить. Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/vneshnee-stroenie-steblya" >ссылка</a>и <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/vnutrennee-stroenie-steblya" >ссылка</a></h5><br>
   	  <h4>Музыка</h4>
-  <h5></h5><br>
+  <h5>Слушать кантату Кармина Бурана, краткая биография Карла Орфа </h5><br>
 
  </div>
         </div>
