--- a/1 февраля.html
+++ b/1 февраля.html
@@ -74,11 +74,10 @@
   <h4>Математика</h4>
   <h5>пример в тетради, правила, №884-893 ( зеленые) 901(2), 902, 903. п.32 конспект.</h5><br>
   <h4>Английский 1гр.</h4>
-  <h5>W.b p. ex. </h5><br>
-
+  <h5>ex.1 a,b, p. 35 (w.b.), повторяем слова по М5</h5><br>
   <h4>Обществознание</h4>
-  <h5>п.8 , "в классе и дома" (ученик)</h5><br>
-  	  <h4>История</h4>
+  <h5>п.8 , "в классе и дома" (учебник)</h5><br>
+  <h4>История</h4>
   <h5>Подготовка к проверочной работе по: главе 1 "Народы и государства на территории страны в древности" и теме: "Первые известия о Руси"</h5><br>
 
  </div>
