--- a/1 февраля.html
+++ b/1 февраля.html
@@ -76,7 +76,7 @@
   <h4>Английский 1гр.</h4>
   <h5>ex.1 a,b, p. 35 (w.b.), повторяем слова по М5</h5><br>
   <h4>Обществознание</h4>
-  <h5>п.8 , "в классе и дома" (учебник)</h5><br>
+  <h5>выполнить задания по ссылке (до 03.02.2022): <a href="https://edu.skysmart.ru/student/mahikeralo" >ссылка</a></h5><br>
   <h4>История</h4>
   <h5>Подготовка к проверочной работе по: главе 1 "Народы и государства на территории страны в древности" и теме: "Первые известия о Руси"</h5><br>
 
