--- a/dz.html
+++ b/dz.html
@@ -84,6 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз и классные работы</h2>
             <div class="border" data-aos="flip-down">
+            	            	            	            	      	            	            	     <h5> <a href="2 февраля.html" class="nb">Дз на 2 февраля Математика Английский Обществознание</a></h5>
             	            	            	      	            	            	     <h5> <a href="1 февраля.html" class="nb">Дз на 1 февраля Математика Английский Обществознание История</a></h5>
             	            	      	            	            	     <h5> <a href="31 января.html" class="nb">Дз на 31 января Математика География Литература</a></h5>
 
