--- a/dz.html
+++ b/dz.html
@@ -82,11 +82,12 @@
     <section class="u-clearfix u-image u-section-1" id="sec-9d4a" data-image-width="1600" data-image-height="901">
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-clearfix u-custom-html u-custom-html-1">
-          <center> <h2 class="nb">Дз и классные работы</h2>
+          <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	            	            	            	      	            	            	     <h5> <a href="2 февраля.html" class="nb">Дз на 2 февраля Математика Английский Обществознание</a></h5>
-            	            	            	      	            	            	     <h5> <a href="1 февраля.html" class="nb">Дз на 1 февраля Математика Английский Обществознание История</a></h5>
-            	            	      	            	            	     <h5> <a href="31 января.html" class="nb">Дз на 31 января Математика География Литература</a></h5>
+            	              	      	            	            	     <h5> <a href="3 февраля.html" class="nb">Дз на 3 февраля Математика </a></h5>	            	            	      	            	            	    
+ <h5> <a href="2 февраля.html" class="nb">Дз на 2 февраля Математика Английский Обществознание</a></h5>
+            	            	          
+          
 
 
  </div>
