--- a/3 февраля.html
+++ b/3 февраля.html
@@ -75,6 +75,8 @@
   <h5>2 февраля. занятия онлайн 2 урока ( не один) математика ( не геометрия). 5-6 урок</h5><br>
   	  <h4>Литература</h4>
   <h5>СТР. 49, Читаем самостоятельно, вопрос 5.</h5><br>
+  	 	  <h4>Изо</h4>
+  <h5>Закончить рисунок в любом жанре изобразительного искусства, любыми графическими материалами.</h5><br>
  </div>
         </div>
       </div>
