--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	              	      	            	            	     <h5> <a href="3 февраля.html" class="nb">Дз на 3 февраля Математика </a></h5>	            	            	      	            	            	    
+            	              	      	            	            	     <h5> <a href="3 февраля.html" class="nb">Дз на 3 февраля Математика Литература Изо</a></h5>	            	            	      	            	            	    
  <h5> <a href="2 февраля.html" class="nb">Дз на 2 февраля Математика Английский Обществознание</a></h5>
             	            	          
           
