--- a/4 февраля.html
+++ b/4 февраля.html
@@ -78,7 +78,7 @@
   <h4>Английский 1гр.</h4>
   <h5>Ex.1,3, p.58, ex. 5,6, p. 59 (c.b.); Д.З. ex. 1, p. 36 (w.b.)</h5><br>
   <h4>Обществознание</h4>
-  <h5>п.8 , "в классе и дома" (ученик)</h5><br>
+  <h5>п.8 , "в классе и дома" (устно)</h5><br>
 
  </div>
         </div>
