--- a/5 февраля.html
+++ b/5 февраля.html
@@ -77,6 +77,8 @@
   <h5>СТР. 58 творческое задание номер 1 ПИСЬМЕННО В ТЕТРАДИ. </h5><br>
   <h4>Биология</h4>
   <h5>Учебник стр.174-175 читать, ? устно, термины с определениями учить, РТ № 3(стр.63). Посмотреть <a href="https://interneturok.ru/lesson/biology/6-klass/bstroenie-pokrytosemennyh-rastenijb/vneshnee-stroenie-lista" >ссылка</a></h5><br>
+  <h4>Русский</h4>
+  <h5><a href="https://resh.edu.ru/subject/lesson/6976/main/260730/" >ссылка</a>стр 26 правило, упр 437,439</h5><br>
 
  </div>
         </div>
