--- a/8 февраля.html
+++ b/8 февраля.html
@@ -78,6 +78,8 @@
   <h5>941-951 зел. 957-961 п. 34 чит. </h5><br>
   <h4>История</h4>
   <h5>Чтение параграфа: "становление Древнерусского государства". Ответить устно на вопросы в конце параграфа</h5><br>
+  <h4>География</h4>
+  <h5>параграф 48, р.т. стр.52-53, №1-7. ЗАДАНИЕ НА УРОК СМОТРЕТЬ В Д\З НА 14.02</h5><br>
 
  </div>
         </div>
