--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-            	    		     <h5> <a href="8 февраля.html" class="nb">Дз на 8 февраля География Английский  </a></h5>	            	            	      
+            	    		     <h5> <a href="8 февраля.html" class="nb">Дз на 8 февраля География Английский История Математика </a></h5>	            	            	      
  <h5> <a href="7 февраля.html" class="nb">Дз на 7 февраля Математика Литература География</a></h5>	      
             			     <h5> <a href="5 февраля.html" class="nb">Дз на 5 февраля Математика Литература Биология Русский </a></h5>	      
             
