--- a/8 февраля.html
+++ b/8 февраля.html
@@ -79,7 +79,7 @@
   <h4>История</h4>
   <h5>Чтение параграфа: "становление Древнерусского государства". Ответить устно на вопросы в конце параграфа</h5><br>
   <h4>География</h4>
-  <h5>параграф 48, р.т. стр.52-53, №1-7. ЗАДАНИЕ НА УРОК СМОТРЕТЬ В Д\З НА 14.02</h5><br>
+  <h5>параграф 48, р.т. стр.52-53, №1-7. ЗАДАНИЕ НА УРОК параграф 49, прочитать,знать содержание, выписать термины. ОБязательно посмотреть урок <a href="https://www.youtube.com/watch?v=dEpTiEJFKF0">ссылка</a>Записать и выучить все про атмосферное давление.</h5><br>
 
  </div>
         </div>
