--- a/dz.html
+++ b/dz.html
@@ -84,7 +84,7 @@
         <div class="u-clearfix u-custom-html u-custom-html-1">
           <center> <h2 class="nb">Дз классные работы</h2>
             <div class="border" data-aos="flip-down">
-		     <h5> <a href="10 февраля.html" class="nb">Дз на 10 февраля Математика Литература Английский</a></h5>
+		     <h5> <a href="10 февраляя.html" class="nb">Дз на 10 февраля Математика Литература Английский</a></h5>
 		      <h5> <a href="9 февраляя.html" class="nb">Дз на 9 февраля Математика Русский </a></h5>	      
             
             	    		     <h5> <a href="8 февраля.html" class="nb">Дз на 8 февраля География Английский История Математика </a></h5>	            	            	      
