--- a/9 февраляя.html
+++ b/9 февраляя.html
@@ -75,7 +75,9 @@
   <h5>965-975(зел)</h5><br>
   <h4>Русский</h4>
   <h5>429</h5><br>
- 
+ <h4>ИЗО</h4>
+<h5>Рассмотреть различные виды архитектурных строений, интересные идеи архитекторов различных эпох и выполнить Архитектурный пейзаж в графике простым каранлашом.
+</h5>		    
  </div>
         </div>
       </div>
