--- a/10 февраляя.html
+++ b/10 февраляя.html
@@ -72,7 +72,7 @@
 
 
   <h4>Математика</h4>
-  <h5>965-975 зел</h5><br>
+  <h5>977, 983-985. п.34 читать</h5><br>
   <h4>Английский 1гр.</h4>
   <h5></h5><br>
   <h4>Литература</h4>
