--- a/11 февраля.html
+++ b/11 февраля.html
@@ -77,7 +77,9 @@
   <h5>Прочитать рассказ А. Платонова "Корова" (нет в учебнике). Выучить отрывок из стихотворения "Ты помнишь, Алеша, дороги Смоленщины" (5 строф), стр. 61 до стр. 62 "С простыми крестами их русских могил".</h5><br>
   <h4>Русский</h4>
   <h5>447,428</h5><br>
-  <h4>Обществознание</h4>
+  	  <h4>Обществознание</h4>
+  <h5>п. 9; выполнить задания:  <a href="https://edu.skysmart.ru/student/xepahomaho" >ссылка</a>; видеоматериал к уроку: <a href="https://resh.edu.ru/subject/lesson/7124/main/255722/" >ссылка</a></h5><br>
+  <h4>История</h4>
   <h5>Параграф "Правление Князя Владимира. Крещение Руси". Изучаем документ Из "Повести Временных лет". Ответить письменно на вопросы по документу 1,2,3</h5><br>
 
  </div>
